Fix some alignment issues in the header

--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -142,7 +142,7 @@ header {
 }
 
 header h1 {
-    margin-top: 23px;
+    margin-top: 22px;
     background: url(/media/images/header-logo.png) no-repeat;
     height: 40px;
     width: 202px;
@@ -155,7 +155,7 @@ header h1 {
 }
 
 nav {
-    margin-top: 30px;
+    margin-top: 23px;
 	float: right;
 }
 
